--- a/.github/workflows/update-points.yml
+++ b/.github/workflows/update-points.yml
@@ -29,7 +29,7 @@ jobs:
     
     - name: Run update script
       run: |
-        python update_automatic_batch.py
+        python update_automatic_cloudscraper.py
       
     - name: Show results
       if: always()
